# repo-context-hooks

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TELEMETRY.md  UBIQUITOUS_LANGUAGE.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/scripts/: repo_specs_memory.py  session_context.py
.github/workflows/: ci.yml  pages.yml  publish.yml
architecture/: index.html
competitive-analysis/: index.html
demo/animation-plan/: index.html
docs/: architecture.md  competitive-analysis.md  index.md  monitoring.md  observability.md  platform-playbooks.md  platforms.md  positioning.md  prd-session-metrics.md  telemetry-policy.md
docs/demo/: animation-plan.md
docs/launch/: linkedin.md  platform-issue-drafts.md  platform-roadmap.md  substack.md
docs/monitoring/: history.json  index.html
docs/rollup/: index.html  rollup.json
docs/superpowers/plans/: 2026-04-17-repo-context-hooks-implementation.md  2026-04-20-platform-foundation-implementation.md  2026-04-20-readme-visual-polish-implementation.md  2026-04-22-kimi-code-adapter-implementation.md  2026-04-22-ollama-runtime-template-implementation.md  2026-04-22-openclaw-adapter-implementation.md  2026-04-22-replit-adapter-implementation.md  2026-04-22-windsurf-lovable-implementation.md  2026-04-23-platform-readiness-implementation.md  (+5 more)
examples/minimal-repo/: README.md
examples/multi-project/: README.md
graphify/: __init__.py  cli.py  installer.py
graphify/bundle/: hooks.json
launch/linkedin/: index.html
launch/platform-issue-drafts/: index.html
launch/platform-roadmap/: index.html
launch/substack/: index.html
monitoring/: history.json  index.html
platform-playbooks/: index.html
positioning/: index.html
prd-session-metrics/: index.html
repo_context_hooks/: __init__.py  badge.py  cli.py  consent.py  doctor.py  installer.py  recommend.py  repo_contract.py  telemetry.py
repohandoff/: __main__.py  cli.py
search/: search_index.json
specs/: README.md
telemetry-policy/: index.html
tests/: test_alias_modules.py  test_badge.py  test_bundle_integrity.py  test_cli.py  test_consent.py  test_doctor.py  test_experiment.py  test_export.py  test_installer.py  test_monitoring_surface.py  test_platform_artifacts.py  test_platform_docs.py  test_platform_install_plans.py  test_platform_playbooks.py  test_platform_polish_contract.py  test_platform_registry.py  test_readme_contract.py  test_recommend.py  test_repo_contract_runtime.py  test_repo_memory_contract.py  test_roi_metrics.py  test_script_degradation.py  test_session_duration_wiring.py  test_session_metrics.py  test_telemetry.py  test_telemetry_policy.py  test_telemetry_sampling_regression.py  test_visual_contract.py
(+64 files in other folders)
